added click listener

--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
 </head>
 <body>
     <div id = "container">
-        <input type="text" class="display" value="" disabled />
+        <div type="text" class="display">0</div>
         <div id = "keys">
             <button class = "allClear"> AC </button>
             <button class = "delete"> ⌫ </button>
-            <button type = "%"> % </button>
-            <button type = "/"> ÷ </button>
+            <button id = "%"> % </button>
+            <button id = "/"> ÷ </button>
 
-            <button type = "7"> 7 </button>
-            <button type = "8"> 8 </button>
-            <button type = "9"> 9 </button>
-            <button type = "*"> * </button>
+            <button id = "7"> 7 </button>
+            <button id = "8"> 8 </button>
+            <button id = "9"> 9 </button>
+            <button id = "*"> * </button>
 
-            <button type = "4"> 4 </button>
-            <button type = "5"> 5 </button>
-            <button type = "6"> 6 </button>
-            <button type = "-"> - </button>
+            <button id = "4"> 4 </button>
+            <button id = "5"> 5 </button>
+            <button id = "6"> 6 </button>
+            <button id = "-"> - </button>
 
-            <button type = "1"> 1 </button>
-            <button type = "2"> 2 </button>
-            <button type = "3"> 3 </button>
-            <button type = "+"> + </button>
+            <button id = "1"> 1 </button>
+            <button id = "2"> 2 </button>
+            <button id = "3"> 3 </button>
+            <button id = "+"> + </button>
 
-            <button type = "0"> 0 </button>
-            <button type = "."> . </button>
-            <button id = "equals" type = "="> = </button>
+            <button id = "0"> 0 </button>
+            <button id = "."> . </button>
+            <button id = "=" class = "equals"> = </button>
 
         </div>
     </div>
