--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
     <div id = "container">
         <div type="text" class="display">0</div>
         <div id = "keys">
-            <button class = "allClear"> AC </button>
-            <button class = "delete"> ⌫ </button>
-            <button id = "%"> % </button>
-            <button id = "/"> ÷ </button>
+            <button data-action = "clear">AC</button>
+            <button data-action = "delete">⌫</button>
+            <button class="operatorKey" data-action="remainder">%</button>
+            <button class="operatorKey" data-action="divide">÷</button>
 
-            <button id = "7"> 7 </button>
-            <button id = "8"> 8 </button>
-            <button id = "9"> 9 </button>
-            <button id = "*"> * </button>
+            <button >7</button>
+            <button >8</button>
+            <button >9</button>
+            <button class="operatorKey" data-action="multiply">*</button>
 
-            <button id = "4"> 4 </button>
-            <button id = "5"> 5 </button>
-            <button id = "6"> 6 </button>
-            <button id = "-"> - </button>
+            <button >4</button>
+            <button >5</button>
+            <button >6</button>
+            <button class="operatorKey" data-action="subtract">-</button>
 
-            <button id = "1"> 1 </button>
-            <button id = "2"> 2 </button>
-            <button id = "3"> 3 </button>
-            <button id = "+"> + </button>
+            <button >1</button>
+            <button >2</button>
+            <button >3</button>
+            <button class="operatorKey" data-action="add">+</button>
 
-            <button id = "0"> 0 </button>
-            <button id = "."> . </button>
-            <button id = "=" class = "equals"> = </button>
+            <button >0</button>
+            <button class="operatorKey" data-action="decimal">.</button>
+            <button class="equalsKey" data-action="operate">=</button>
 
         </div>
     </div>
