--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <button class="operatorKey" data-action="add">+</button>
 
             <button >0</button>
-            <button class="operatorKey" data-action="decimal">.</button>
+            <button data-action="decimal">.</button>
             <button class="equalsKey" data-action="operate">=</button>
 
         </div>
